# nekonade-kozeni-uta-search

./: .eslintrc.js  .firebaserc  .gitignore  .prettierrc  LICENSE  README.md  components.d.ts  env.d.ts  firebase.json  index.html  package-lock.json  package.json  vite.config.mts
src/: algolia.ts  common.ts  main.ts  utils.ts
src/components/app-bar/: AppBar.vue
src/components/app-drawer/: AppDrawer.vue
src/components/auth/: AuthDialog.vue
src/components/bottom-menu/: BottomMenu.vue
src/components/playlist-card/: PlaylistCard.vue
src/components/playlist-form/: PlaylistFormDialog.vue
src/components/playlist-song-list/: PlaylistSongList.vue
src/components/search-area/: SearchArea.vue  SearchQuery.ts
src/components/share-youtube/: ShareYoutube.vue
src/components/song-card/: BaseSongCard.vue  PlaylistSongCard.vue  SongCard.vue
src/layouts/default/: Default.vue
src/plugins/: index.ts  vuetify.ts
src/public/: privacy-policy.md  terms-of-service.md
src/router/: index.ts
src/store/: favorites.ts  playlists.ts  song.ts  user.ts
src/styles/: settings.scss
src/views/: Playlist.vue  PrivacyPolicy.vue  Search.vue  TermsOfServer.vue
supabase/: config.toml
supabase/migrations/: 20250323130221_create_tables.sql
terraform/: .gitignore  .terraform.lock.hcl  example.terraform.tfvars  main.tf  variables.tf
tool/: data.json  example.config.toml  pyproject.toml
tool/src/: database.py  main.py  settings.py  utils.py
tool/src/commands/: algolia.py  artists.py  backup.py  base.py  performances.py  songs.py  thumbnails.py
types/: database.types.ts
(+19 files in other folders)
